gcc/testsuite/rust/rustc/ui/compile_error_macro.rs
fn main() {
    compile_error!("a very descriptive error message"); // { dg-error "" "" { target *-*-* } }
}

